@@ -10,6 +10,7 @@ SVN HEAD
   i2c-stub-from-dump: Be more tolerant on input dump format
   library: New libi2c library
            Properly propagate real error codes on read errors
+           Use I2C_SMBUS_BLOCK_MAX instead of hard-coding 32
 
 3.1.0 (2011-12-04)
   decode-dimms: Decode module configuration type of DDR SDRAM
